--- a/package.json
+++ b/package.json
@@ -2,19 +2,32 @@
   "name": "nodejs-arecord-multimon",
   "version": "1.0.4",
   "description": "Take arecord command piped to multimon-ng and give results",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node demo/demo.ts"
   },
+  "keywords": [
+    "nodejs",
+    "decoder",
+    "audio",
+    "device",
+    "ham",
+    "radio",
+    "aprs",
+    "dtmf",
+    "multimon",
+    "arecord"
+  ],
   "author": "Valentin Saugnier (valentin.s.10@gmail.com)",
   "license": "ISC",
   "peerDependencies": {
     "fkill": "^7.0.0",
-    "@types/node": "^13.11.1",
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
+    "@types/node": "^13.11.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   }
